moves courses-page.yml to /pages/courses.yml

--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -6,9 +6,9 @@ permalink: /courses/gym-shorts/
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
-{%- assign main = site.data.courses-page -%}
-{%- assign featured = site.data.courses-page.featured -%}
-{%- assign about = site.data.courses-page.about -%}
+{%- assign main = site.data.page.courses -%}
+{%- assign featured = site.data.page.courses.featured -%}
+{%- assign about = site.data.page.courses.about -%}
 {%- assign courses = site.data.courses -%}
 
 {%- assign page_active = "gym-shorts" -%}
