--- a/courses/index.html
+++ b/courses/index.html
@@ -7,8 +7,8 @@ permalink: /courses/
 {%- endif -%}
 
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
-{%- assign main = site.data.courses-page -%}
-{%- assign about = site.data.courses-page.about -%}
+{%- assign main = site.data.page.courses -%}
+{%- assign about = site.data.page.courses.about -%}
 {%- assign courses = site.data.courses -%}
 {%- assign take5 = site.data.take5 -%}
 
