--- a/hub-pages/web-development/index.html
+++ b/hub-pages/web-development/index.html
@@ -3,7 +3,7 @@ layout: wrapper-full-default
 permalink: /web-development/
 css: [/css/hub-pages.css]
 ---
-{%- assign main = site.data.courses-page -%}
+{%- assign main = site.data.page.courses -%}
 
 {%- assign page_active = "collections" -%}
 {%- include partials/nav-courses-format.html -%}
