--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -6,9 +6,9 @@ permalink: /courses/full/
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
-{%- assign main = site.data.page.courses -%}
-{%- assign featured = site.data.page.courses.featured -%}
-{%- assign about = site.data.page.courses.about -%}
+{%- assign main = site.data.pages.courses -%}
+{%- assign featured = site.data.pages.courses.featured -%}
+{%- assign about = site.data.pages.courses.about -%}
 {%- assign courses = site.data.courses -%}
 
 {%- assign page_active = "full" -%}
