--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -3,8 +3,8 @@ layout: wrapper-full-default
 permalink: /collections/
 css: [/css/collections.css]
 ---
-{%- assign main = site.data.page.courses -%}
-{%- assign about = site.data.page.courses.about -%}
+{%- assign main = site.data.pages.courses -%}
+{%- assign about = site.data.pages.courses.about -%}
 
 {%- assign page_active = "collections" -%}
 {%- include partials/nav-courses-format.html -%}
