--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -4,8 +4,8 @@ permalink: /courses/take5/
 css: [/css/take5.css]
 ---
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
-{%- assign main = site.data.page.courses -%}
-{%- assign about = site.data.page.courses.about -%}
+{%- assign main = site.data.pages.courses -%}
+{%- assign about = site.data.pages.courses.about -%}
 
 {%- assign page_active = "take5" -%}
 {%- include partials/nav-courses-format.html -%}
