--- a/hub-pages/career-skills/index.html
+++ b/hub-pages/career-skills/index.html
@@ -3,7 +3,7 @@ layout: wrapper-full-default
 permalink: /career-skills/
 css: [/css/hub-pages.css]
 ---
-{%- assign main = site.data.page.courses -%}
+{%- assign main = site.data.pages.courses -%}
 
 {%- assign page_active = "take5" -%}
 {%- include partials/nav-courses-format.html -%}
