fixes careers skills variable, uses built-in include variables
See https://jekyllrb.com/docs/includes/#passing-parameters-to-includes

--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -11,8 +11,7 @@ permalink: /courses/gym-shorts/
 {%- assign about = site.data.pages.courses.about -%}
 {%- assign courses = site.data.courses -%}
 
-{%- assign page_active = "gym-shorts" -%}
-{%- include partials/nav-courses-format.html -%}
+{%- include partials/nav-courses-format.html page_active = "gym-shorts" -%}
 
 <section class="find-courses" id="catalog">
 
