--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -11,8 +11,7 @@ permalink: /courses/full/
 {%- assign about = site.data.pages.courses.about -%}
 {%- assign courses = site.data.courses -%}
 
-{%- assign page_active = "full" -%}
-{%- include partials/nav-courses-format.html -%}
+{%- include partials/nav-courses-format.html page_active = "full" -%}
 
 <section class="find-courses" id="catalog">
 
