--- a/hub-pages/career-skills/index.html
+++ b/hub-pages/career-skills/index.html
@@ -5,8 +5,7 @@ css: [/css/hub-pages.css]
 ---
 {%- assign main = site.data.pages.courses -%}
 
-{%- assign page_active = "take5" -%}
-{%- include partials/nav-courses-format.html -%}
+{%- include partials/nav-courses-format.html page_active = "collections" -%}
 
 <main id="main" role="main">
   <section id="about">
