--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -6,8 +6,7 @@ css: [/css/collections.css]
 {%- assign main = site.data.pages.courses -%}
 {%- assign about = site.data.pages.courses.about -%}
 
-{%- assign page_active = "collections" -%}
-{%- include partials/nav-courses-format.html -%}
+{%- include partials/nav-courses-format.html page_active = "collections" -%}
 
 <main id="main" role="main">
   <header class="collections--about" id="about">
