--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -208,6 +208,10 @@ css: [/css/hub-pages.css]
                     <p>Learn the fundamentals of how to get started with creating a more inclusive web. (Hint: It starts with awareness.)</p>
                   </li>
                   <li>
+                    <h3><a href="https://aquentstudios.com/thinking/web-accessibility-drivers-start-your-engines-wcag-2-2-is-here/" target="_blank" rel="noopener">Web Accessibility Drivers, Start Your Engines. WCAG 2.2 Is Here.</a></h3>
+                    <p>Learn about the new global guidelines and what to expect.</p>
+                  </li>
+                  <li>
                     <h3><a href="https://aquenttalent.com/blog/seven-steps-to-improving-accessibility" target="_blank" rel="noopener">Seven Steps to Improving Accessibility</a></h3>
                     <p>Improve the accessibility of your website with these seven starting points for designers, writers, and developers.</p>
                   </li>
