--- a/tests/jobs/jobs-broken-fallback.html
+++ b/tests/jobs/jobs-broken-fallback.html
@@ -2,7 +2,7 @@
 layout: raw
 permalink: /tests/jobs/broken-fallback
 ---
-{%- include partials/test-top.html -%}
+{%- include partials/template-top.html -%}
 
 <div class="container">
   <div class="white-panel">
@@ -12,4 +12,4 @@ permalink: /tests/jobs/broken-fallback
   </div>
 </div><!-- .container -->
 
-{%- include partials/test-bottom.html -%}
+{%- include partials/template-bottom.html -%}
