--- a/tests/jobs/jobs-broken-feed.html
+++ b/tests/jobs/jobs-broken-feed.html
@@ -2,7 +2,7 @@
 layout: raw
 permalink: /tests/jobs/broken-feed
 ---
-{%- include partials/test-top.html -%}
+{%- include partials/template-top.html -%}
 
 <div class="container">
   <div class="white-panel">
@@ -11,4 +11,4 @@ permalink: /tests/jobs/broken-feed
   </div>
 </div><!-- .container -->
 
-{%- include partials/test-bottom.html -%}
+{%- include partials/template-bottom.html -%}
