--- a/courses/index.html
+++ b/courses/index.html
@@ -2,9 +2,7 @@
 layout: raw
 permalink: /courses/
 ---
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-top.html -%}
-{%- endif -%}
+{%- include partials/template-top.html -%}
 
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
 {%- assign main = site.data.pages.courses -%}
@@ -283,6 +281,4 @@ permalink: /courses/
 
 </section>
 
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
